Add component skills and experience

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hoja de vida</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <div class="banner">
@@ -14,10 +16,31 @@
     </div>
 
     <div class="container_basic">
-        <div class="basics">
-            <p class="name">BAYRON CAMPAZ</p>
-            <p>Software Engineer</p>
+      <div class="basics">
+        <p class="name">BAYRON CAMPAZ</p>
+        <p class="profesion">Software Engineer</p>
+
+        <div class="basic_data">
+          <i class="material-icons">email</i>
+          <p> bayroncampaz1@gmail.com </p>
         </div>
+
+        <div class="basic_data">
+          <i class="material-icons">language</i>
+          <p> bayroncampaz.com.co </p>
+        </div>
+
+        <div class="basic_data">
+          <i class="material-icons">phone</i>
+          <p> 3202020201 </p>
+        </div>
+
+        <div class="basic_data">
+          <i class="material-icons">my_location</i>
+          <p> Cali, Colombia </p>
+        </div>
+
+    </div>
 
         <div class="photo">
             <img src="img/photo.jpg" alt="">
@@ -44,41 +67,50 @@
         </div>
     </div>
 
+
     <div class="education">
+
+      <div class="title_section">
+        <div>
+          <img src="img/book.png">
+          <p>EDUCATION</p>
+        </div>
+      </div>
+
         <div class="timeline">
             <div class="container left">
               <div class="content">
-                <h2>2017</h2>
+                <h2>Preparatory Education</h2>
                 <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
               </div>
             </div>
             <div class="container right">
               <div class="content">
-                <h2>2016</h2>
+                <h2>High School</h2>
                 <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
               </div>
             </div>
             <div class="container left">
               <div class="content">
-                <h2>2015</h2>
+                <h2>Software Engineering</h2>
                 <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
               </div>
             </div>
             <div class="container right">
               <div class="content">
-                <h2>2012</h2>
+                <h2>Git Professional</h2>
                 <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
               </div>
             </div>
             <div class="container left">
               <div class="content">
-                <h2>2011</h2>
+                <h2>Unity 3D</h2>
                 <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
               </div>
             </div>
             <div class="container right">
               <div class="content">
-                <h2>2007</h2>
+                <h2>Adobe Photoshop CS5</h2>
                 <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
               </div>
             </div>
@@ -86,13 +118,93 @@
 
     </div>
 
-    <div class=skills>
+    <div class="skills">
+
+      <div class="title_section">
+        <div>
+          <img src="img/book.png">
+          <p>SKILLS</p>
+        </div>
+      </div>
+
+      <div class="container_skills">
+        
+        <div class="type_skill">
+          <h1>Professional</h1>
+          <p> Html5 </p>
+          <progress max="100" value="60"></progress>
+          <span>60%</span>
+          <p> CSS3 </p>
+          <progress max="100" value="60"></progress>
+          <span>60%</span>
+          <p> JQuery </p>
+          <progress max="100" value="40"></progress>
+          <span>40%</span>
+          <p> Vue </p>
+          <progress max="100" value="20"></progress>
+          <span>20%</span>
+        </div>
+
+        <div class="type_skill">
+          <h1>Personal</h1>
+          <p> Communication </p>
+          <progress max="100" value="70"></progress>
+          <span>70%</span>
+          <p> Teamwork </p>
+          <progress max="100" value="60"></progress>
+          <span>60%</span>
+          <p> Creativity </p>
+          <progress max="100" value="85"></progress>
+          <span>85%</span>
+          <p> Dedication </p>
+          <progress max="100" value="95"></progress>
+          <span>95%</span>
+        </div>
+
+        <div class="type_skill">
+          <h1>Tools</h1>
+          <p> Spring </p>
+          <progress max="100" value="90"></progress>
+          <span>90%</span>
+          <p> Git </p>
+          <progress max="100" value="85"></progress>
+          <span>85%</span>
+          <p> React </p>
+          <progress max="100" value="40"></progress>
+          <span>40%</span>
+          <p> Android Studio </p>
+          <progress max="100" value="75"></progress>
+          <span>75%</span>
+        </div>
+
+      </div>
 
     </div>
 
     <div class="experience">
 
-    </div>
+      <div class="title_section">
+        <div>
+          <img src="img/book.png">
+          <p>EXPERIENCE</p>
+        </div>
+      </div>
+
+      <div class="timeline">
+        <div class="container left">
+          <div class="content">
+            <h2>Preparatory Education</h2>
+            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+          </div>
+        </div>
+        <div class="container right">
+          <div class="content">
+            <h2>High School</h2>
+            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+          </div>
+        </div>
+      </div>
+
 
     <script src="js/details.js"></script>
 </body>
