Implements of modals

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+
+     <!--------------- Banner --------------------->
     <div class="banner">
         <img src="img/banner.jpg">
-
     </div>
+
+    <!--------------- Section Basic Information --------------------->
 
     <div class="container_basic">
       <div class="basics">
@@ -48,6 +51,8 @@
 
     </div>
 
+       <!--------------- Section Description --------------------->
+
     <div class="description">
         <div class="text_description">
             Fusce vitae lorem leo. Morbi ultrices odio vel leo finibus, eu pellentesque nibh gravida. 
@@ -67,6 +72,7 @@
         </div>
     </div>
 
+    <!--------------- Section Education --------------------->
 
     <div class="education">
 
@@ -81,31 +87,35 @@
             <div class="container left">
               <div class="content">
                 <h2>Preparatory Education</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                <p>
+                  I studied elementary school at the Domingo Irurita educational institution located in Palmira, Valle del Cauca since 2004 until 2009.</p>
               </div>
             </div>
             <div class="container right">
               <div class="content">
                 <h2>High School</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                <p>
+                  I also studied secondary school at the Domingo Irurita educational institution located in Palmira Valle del Cauca from 2009 to 2015. I was the best student in the class and I had the highest score of the ICFES exam.</p>
               </div>
             </div>
             <div class="container left">
               <div class="content">
                 <h2>Software Engineering</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                <p>
+                  I have studied Software Engineering at the ICESI University of Cali since 2015 until the present.</p>
               </div>
             </div>
             <div class="container right">
               <div class="content">
                 <h2>Git Professional</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                <p>
+                  I did a course on basic videogame creation using Unity 3D at SENA in 2016.</p>
               </div>
             </div>
             <div class="container left">
               <div class="content">
                 <h2>Unity 3D</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                <p>I did a professional Git management course on the Platzi virtual learning platform in 2018</p>
               </div>
             </div>
             <div class="container right">
@@ -117,6 +127,7 @@
           </div>
 
     </div>
+    <!--------------- Section Skills --------------------->
 
     <div class="skills">
 
@@ -137,7 +148,7 @@
           <p> CSS3 </p>
           <progress max="100" value="60"></progress>
           <span>60%</span>
-          <p> JQuery </p>
+          <p> Javascript </p>
           <progress max="100" value="40"></progress>
           <span>40%</span>
           <p> Vue </p>
@@ -205,7 +216,19 @@
         </div>
       </div>
 
+             <!--------------- Modal --------------------->
 
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
     <script src="js/details.js"></script>
+
 </body>
 </html>
