--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
     <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
+        <h2> About ...</h2>
+        <p>Here going the description.</p>
       </div>
     </div>
 
