Add icons and solutions details

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,6 +43,13 @@
           <p> Cali, Colombia </p>
         </div>
 
+        <div class="icons-social-media">
+          <img src="img/facebook.png" alt="">
+          <img src="img/twitter.png" alt="">
+          <img src="img/google.png" alt="">
+          <img src="img/linkedin.png" alt="">
+        </div>
+
     </div>
 
         <div class="photo">
@@ -55,11 +62,10 @@
 
     <div class="description">
         <div class="text_description">
-            Fusce vitae lorem leo. Morbi ultrices odio vel leo finibus, eu pellentesque nibh gravida. 
-            Curabitur laoreet nunc non tempor gravida. Proin consequat tempus eleifend. 
-            Nunc sollicitudin cursus dignissim. Aenean at ex a ipsum mollis pellentesque in non ligula. 
-            Integer et sollicitudin mi, et laoreet nulla. Nullam purus dolor, elementum eget enim nec, gravida pretium mi. 
-            Nunc suscipit ante eu nisl malesuada, at maximus enim dignissim.
+          Hello, I'm Bayron Campaz, Software Engineering Student of Icesi University. 
+          I'm currently in the last semester of the career. I have knowledge in backend 
+          development with Java particularly with the Spring framework and in the development 
+          of mobile applications on Android. I also have knowledge about basic frontend elements such as HTML, CSS, Javascript.
         </div>
         <div class="container_buttons">
             <button>
@@ -133,7 +139,7 @@
 
       <div class="title_section">
         <div>
-          <img src="img/book.png">
+          <img src="img/skill.png">
           <p>SKILLS</p>
         </div>
       </div>
@@ -151,9 +157,9 @@
           <p> Javascript </p>
           <progress max="100" value="40"></progress>
           <span>40%</span>
-          <p> Vue </p>
-          <progress max="100" value="20"></progress>
-          <span>20%</span>
+          <p> Java </p>
+          <progress max="100" value="90"></progress>
+          <span>90%</span>
         </div>
 
         <div class="type_skill">
@@ -181,8 +187,8 @@
           <progress max="100" value="85"></progress>
           <span>85%</span>
           <p> React </p>
-          <progress max="100" value="40"></progress>
-          <span>40%</span>
+          <progress max="100" value="30"></progress>
+          <span>30%</span>
           <p> Android Studio </p>
           <progress max="100" value="75"></progress>
           <span>75%</span>
@@ -192,11 +198,13 @@
 
     </div>
 
+        <!--------------- Section Experience --------------------->
+
     <div class="experience">
 
       <div class="title_section">
         <div>
-          <img src="img/book.png">
+          <img src="img/experience.png">
           <p>EXPERIENCE</p>
         </div>
       </div>
@@ -204,14 +212,19 @@
       <div class="timeline">
         <div class="container left">
           <div class="content">
-            <h2>Preparatory Education</h2>
-            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+            <h2>Integrator Project I</h2>
+            <p>This is a university project in which we developed a desktop 
+              application in which it was predicted who would be the next 
+              president of Colombiafor the 2018-2022 period from an analysis
+               of feelings in comments on Twitter and Facebook.</p>
           </div>
         </div>
         <div class="container right">
           <div class="content">
-            <h2>High School</h2>
-            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+            <h2>Integrator Project II</h2>
+            <p>This is a university project in which we develop a web application
+               in which resumes can be created and the judicial background of a user
+                can be checked, using the API of the Truora company.</p>
           </div>
         </div>
       </div>
