Fix errors in Experience

--- a/index.html
+++ b/index.html
@@ -113,21 +113,20 @@
             </div>
             <div class="container right">
               <div class="content">
-                <h2>Git Professional</h2>
-                <p>
-                  I did a course on basic videogame creation using Unity 3D at SENA in 2016.</p>
+                <h2>Adobe Photoshop CS5</h2>
+                <p>I did a course on Adobe Photoshop at SENA in 2015.</p>
               </div>
             </div>
             <div class="container left">
               <div class="content">
                 <h2>Unity 3D</h2>
-                <p>I did a professional Git management course on the Platzi virtual learning platform in 2018</p>
+                <p>I did a course on basic videogame creation using Unity 3D at SENA in 2016.</p>
               </div>
             </div>
             <div class="container right">
               <div class="content">
-                <h2>Adobe Photoshop CS5</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                <h2>Git ProfessionalAdobe Photoshop CS5</h2>
+                <p>I did a professional Git management course on the Platzi virtual learning platform in 2018</p>
               </div>
             </div>
           </div>
