--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
             <div class="container right">
               <div class="content">
-                <h2>Git ProfessionalAdobe Photoshop CS5</h2>
+                <h2>Git Professional</h2>
                 <p>I did a professional Git management course on the Platzi virtual learning platform in 2018</p>
               </div>
             </div>
