--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="container right">
               <div class="content">
                 <h2>Git Professional</h2>
-                <p>I did a professional Git management course on the Platzi virtual learning platform in 2018</p>
+                <p>I did a professional Git management course on the Platzi virtual learning platform in 2018.</p>
               </div>
             </div>
           </div>
